fixxed the alignment of the navbar in services.css and added a lot of borders

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -172,18 +172,21 @@ h5 {
 	display: flex;
 	flex-direction: column;
 	margin: 50px;
+	border: 1px solid red;
 
 }
 
 .container {
 	width: 1000px;
 	margin: 0 auto;
+	border: 1px solid red;
 }
 
 .container nav a {
 	color: grey;
 	text-decoration: none;
 	margin: 35px;
+	border: 1px solid red;
 }
 
 .container nav a:hover {
@@ -200,11 +203,13 @@ nav {
 	height: 6%;
 	align-items: center;
 	background-color: greenyellow;
+	border: 1px solid red;
 }
 
 nav a:hover {
 	background: orange;
 	color: black;
+	border: 1px solid red;
 }
 
 header {
@@ -212,6 +217,7 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
+	border: 1px solid red;
 }
 
 
@@ -221,27 +227,32 @@ header {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	border: 1px solid red;
 }
 
 .top-content div {
 	margin: 20px;
 	box-sizing: border-box;
+	border: 1px solid red;
 }
 
 .middle-img {
 	margin-left: 20px;
 	margin-right: auto;
 	width: 96%;
+	border: 1px solid red;
 }
 
 .bottom-content {
 	display: flex;
 	margin: 20px;
+	border: 1px solid red;
 }
 
 p {
 	line-height: 1.25;
 	margin: 20px 0;
+	border: 1px solid red;
 }
 
 
@@ -250,10 +261,12 @@ h1 {
 	font-size: 70px;
 	text-align: center;
 	margin-top: 100px;
+	border: 1px solid red;
 }
 
 h2 {
 	text-align: left;
+	border: 1px solid red;
 }
 
 button {
@@ -263,6 +276,7 @@ button {
 	font-family: 'Libre Barcode 39';
 	padding: 5px 40px 5px 40px;
 	margin-left: 70px;
+	border: 1px solid red;
 }
 
 button:hover {
@@ -273,21 +287,25 @@ button:hover {
 hr {
 	margin-top: 50px;
 	width: 96%;
+	border: 1px solid red;
 }
 
 #hr-bottom {
 	margin-top: 20px;
 	margin-bottom: 40px;
+	border: 1px solid red;
 }
 
 address {
 	font-family: "Audiowide";
+	border: 1px solid red;
 }
 
 .address-section {
 	display: flex;
 	justify-content: flex-start;
 	margin: 20px;
+	border: 1px solid red;
 }
 
 footer {
@@ -295,4 +313,5 @@ footer {
 	justify-content: center;
 	margin-bottom: 100px;
 	margin-top: 50px;
+	border: 1px solid red;
 }
